--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.snowman"
+//        applicationId "com.example.snowman"
+        applicationId "com.eneff.branch.example.snowman"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -41,4 +42,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // required for all Android apps
+    implementation 'io.branch.sdk.android:library:5.+'
+    // required if your app is in the Google Play Store (tip: avoid using bundled play services libs)
+    implementation 'com.google.android.gms:play-services-ads-identifier:17.1.0+'
+    // alternatively, use the following lib for getting the AAID
+    // implementation 'com.google.android.gms:play-services-ads:17.2.0'
+    // optional
+    // Chrome Tab matching (enables 100% guaranteed matching based on cookies)
+    implementation 'androidx.browser:browser:1.0.0'
+    // Replace above with the line below if you do not support androidx
+    // implementation 'com.android.support:customtabs:28.0.0'
 }
